--- a/Yahoo-Messenger-Logo/index.html
+++ b/Yahoo-Messenger-Logo/index.html
@@ -5,9 +5,11 @@
     <link rel='stylesheet' type='text/css' href='style.css'>
   </head>
   <body>
-    <div id='logo'>
+    <div id='head'>
       <div id='eyes'></div>
-      <div id='mouth'></div>
+      <div id='mouth'>
+        <div id='jaw'></div>
+      </div>
     </div>
   <body>
 </html>
