add navigation bar

--- a/iOS-App-Uninstall/index.html
+++ b/iOS-App-Uninstall/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>iOS App Uninstallation Effect</title>
     <link rel='stylesheet' type='text/css' href='style.css' />
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet" />
   </head>
   <body>
     <section id='iphone'>
@@ -12,6 +13,20 @@
       </header>
 
       <main id='screen'>
+        <nav id='navigation-bar'>
+          <span class='connectivity'>
+            <i class='icon-signal'></i>
+            <strong>AT&T</strong>
+            4G
+          </span>
+
+          <time>10:17 AM</time>
+
+          <span class='utilities'>
+            <i class='icon-location-arrow'></i>
+            61%
+          </span>
+        <nav>
       </main>
 
       <footer id='bottom-pane'>
