add Messages app

--- a/iOS-App-Uninstall/index.html
+++ b/iOS-App-Uninstall/index.html
@@ -26,7 +26,18 @@
             <i class='icon-location-arrow'></i>
             61%
           </span>
-        <nav>
+        </nav>
+
+        <menu id='apps-grid'>
+          <li>
+            <!-- SMS -->
+            <span class='app-icon' id='sms'>
+              <i class='icon-comment'></i>
+            </span>
+            <p class='app-name'>Messages</p>
+            <!-- SMS -->
+          </li>
+        </menu>
       </main>
 
       <footer id='bottom-pane'>
