add camera icon

--- a/iOS-App-Uninstall/index.html
+++ b/iOS-App-Uninstall/index.html
@@ -8,7 +8,7 @@
   <body>
     <section id='iphone'>
       <header id='top-pane'>
-        <span id='camera'></span>
+        <span id='camera-lense'></span>
         <span id='speaker'></span>
       </header>
 
@@ -37,6 +37,25 @@
             <p class='app-name'>Messages</p>
             <!-- SMS -->
           </li>
+
+          <!-- Calendar -->
+          <li>
+            <span class='app-icon' id='ical'>
+              <header>Monday</header>
+              <figure>28</figure>
+            </span>
+            <p class='app-name'>Calendar</p>
+          </li>
+          <!-- Calendar -->
+
+          <!-- Camera -->
+          <li>
+            <span class='app-icon' id='camera'>
+              <i class='icon-camera'></i>
+            </span>
+            <p class='app-name'>Camera</p>
+          </li>
+          <!-- Camera -->
         </menu>
       </main>
 
