--- a/iOS-App-Uninstall/index.html
+++ b/iOS-App-Uninstall/index.html
@@ -30,15 +30,12 @@
 
         <menu id='apps-grid'>
           <li>
-            <!-- SMS -->
             <span class='app-icon' id='sms'>
               <i class='icon-comment'></i>
             </span>
             <p class='app-name'>Messages</p>
-            <!-- SMS -->
           </li>
 
-          <!-- Calendar -->
           <li>
             <span class='app-icon' id='ical'>
               <header>Monday</header>
@@ -46,16 +43,84 @@
             </span>
             <p class='app-name'>Calendar</p>
           </li>
-          <!-- Calendar -->
 
-          <!-- Camera -->
           <li>
             <span class='app-icon' id='camera'>
               <i class='icon-camera'></i>
             </span>
             <p class='app-name'>Camera</p>
           </li>
-          <!-- Camera -->
+
+          <li>
+            <span class='app-icon' id='music'>
+              <i class='icon-music'></i>
+            </span>
+              <p class='app-name'>Music</p>
+          </li>
+
+          <li>
+            <span class='app-icon' id='dropbox'>
+              <i class='icon-dropbox'></i>
+            </span>
+              <p class='app-name'>Dropbox</p>
+          </li>
+
+          <li>
+            <span class='app-icon' id='gplus'>
+              <i class='icon-google-plus'></i>
+            </span>
+              <p class='app-name'>Google+</p>
+          </li>
+
+          <li>
+            <span class='app-icon' id='linkedin'>
+              <i class='icon-linkedin'></i>
+            </span>
+              <p class='app-name'>LinkedIn</p>
+          </li>
+
+          <li>
+            <span class='app-icon' id='pinterest'>
+              <i class='icon-pinterest'></i>
+            </span>
+              <p class='app-name'>Pinterest</p>
+          </li>
+
+          <li>
+            <span class='app-icon' id='freshbooks'>
+              <i class='icon-leaf'></i>
+            </span>
+              <p class='app-name'>FreshBooks</p>
+          </li>
+
+          <li>
+            <span class='app-icon' id='mail'>
+              <i class='icon-envelope'></i>
+            </span>
+              <p class='app-name'>Mail</p>
+          </li>
+
+          <li>
+            <span class='app-icon' id='weather'>
+              <i class='icon-umbrella'></i>
+            </span>
+              <p class='app-name'>Weather</p>
+          </li>
+
+          <li>
+            <span class='app-icon' id='facebook'>
+              <i class='icon-facebook'></i>
+            </span>
+              <p class='app-name'>Facebook</p>
+          </li>
+
+          <li>
+            <span class='app-icon' id='youtube'>
+              <i class='icon-youtube-play'></i>
+            </span>
+              <p class='app-name'>YouTube</p>
+          </li>
+
         </menu>
       </main>
 
