--- a/iOS-App-Uninstall/index.html
+++ b/iOS-App-Uninstall/index.html
@@ -25,6 +25,7 @@
           <span class='utilities'>
             <i class='icon-location-arrow'></i>
             61%
+            <span class='battery'></span>
           </span>
         </nav>
 
