add background-clip demo

--- a/Gradient-Text/index.html
+++ b/Gradient-Text/index.html
@@ -21,7 +21,7 @@
         background-size: cover;
         background: #70bg32;
         background-repeat:no-repeat;
-        background: linear-gradient( to left top, blue, red);
+        background: linear-gradient( to left top, #E20000, #C300FF);
         font-size: 110px;
         font-family: Arial;
         color: rgba(0,0,0, 0);
